--- a/styles.css
+++ b/styles.css
@@ -96,14 +96,14 @@ h4 {
 .h2-title {
     font-family: 'Dancing Script', cursive;
     margin-bottom: 0rem;
-    font-size: 4.2rem;
+    font-size: 67px;
     color: #fff;
     text-align: left;
     margin-left: 60px;
 }
 
 .navbar {
-    font-size: 2.1rem;
+    font-size: 34px;
     font-family: 'EB Garamond', serif;
     align-content: right;
     text-align: right;
