--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,8 @@ h4 {
     opacity: 0;
 }
 
+/*index.htlm*/
 
-
-                    /*index.htlm*/
 /****************** Intro Section******************/
 
 .intro-section {
@@ -65,8 +64,6 @@ h4 {
     color: #fff;
 }
 
-
-
 /* .bannerH3 {
     opacity: 1;
     font-size: 4.5rem;
@@ -74,9 +71,8 @@ h4 {
     font-family: 'Permanent Marker', cursive;
 } */
 
+/*home.html*/
 
-
-                    /*home.html*/
 /*******************Title-Section********************/
 
 .title-section {
@@ -144,13 +140,12 @@ h4 {
     color: #006847;
 }
 
-
-
 /*****************Video Container****************/
 
-.vid-section {
+/* .vid-section {
     position: relative;
 }
+
 video {
     position: relative;
     top: 0;
@@ -159,7 +154,53 @@ video {
     right: 0;
     width: 100%;
     height: 100%;
-}
+}*/
+
+.video-wrapper {
+    position: relative;
+  }
+  
+  .video {
+    width: 90%;
+  }
+  
+  .playButton {
+    border-radius: 100px;
+    border: 8px solid #fff;
+    height: 100px;
+    position: absolute;
+    width: 100px;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    cursor: pointer;
+    display: block;
+    opacity: 0.95;
+    transition: opacity 150ms;
+  }
+  
+  .playButton:before {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 25px 0 25px 50px;
+    border-color: transparent transparent transparent #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: -10px;
+    bottom: 0;
+    margin: auto;
+  }
+  
+
+
+
+
 
 /************** Feature Section ******************/
 
@@ -204,8 +245,8 @@ video {
     width: 855px;
 }
 
-
 /*******************Pricing Section************************/
+
 .pricing-section {
     color: #000000;
     padding: 7% 2% 2% 2%;
