--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h4 {
 .h1-intro {
     font-family: 'Dancing Script', cursive;
     margin-bottom: 0rem;
-    font-size: 7.5rem;
+    font-size: 6vmax;
     color: #fff;
 }
 
@@ -37,7 +37,7 @@ h4 {
 
 #h1-introLg1 {
     font-family: 'Permanent Marker', cursive;
-    font-size: 5.5rem;
+    font-size: 5vmax;
     color: #00833E;
     opacity: 0;
 }
@@ -49,7 +49,7 @@ h4 {
 #h1-introLg2 a {
     display: inline-block;
     font-family: 'Permanent Marker', cursive;
-    font-size: 4.5rem;
+    font-size: 4vmax;
     background-color: #00833E;
     color: #fff;
     padding-top: 10px;
@@ -66,6 +66,8 @@ h4 {
 
 .introImg{
     text-align: center;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /*********************home.htlm******************/
