--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,34 @@ h4 {
 }
 
 /*********************index.htlm******************/
+
 /****************** Intro Section******************/
 
 .intro-section {
-    margin: 5%;
-    /* padding-top: 2%; */
     background-color: #000000;
     text-align: center;
+    padding: 3%;
 }
 
+.vertical-center {
+    min-height: 100%;
+    /* Fallback for browsers do NOT support vh unit */
+    min-height: 100vh;
+    /* These two lines are counted as one :-)       */
+    display: flex;
+    align-items: center;
+}
+
+/* .inner {
+    position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+} */
+
 .intro {
-    margin: auto;
+    margin: 0;
     width: 100%;
 }
 
@@ -64,13 +81,14 @@ h4 {
     color: #fff;
 }
 
-.introImg{
+.introImg {
     text-align: center;
     max-width: 100%;
     max-height: 100%;
 }
 
 /*********************home.htlm******************/
+
 /*******************Title-Section********************/
 
 .title-section {
@@ -286,6 +304,7 @@ h4 {
 }
 
 /*******************Modal************************/
+
 .modal-title {
     font-family: 'Dancing Script', cursive;
     text-align: center;
