--- a/styles.css
+++ b/styles.css
@@ -21,20 +21,11 @@ h4 {
 
 .vertical-center {
     min-height: 100%;
-    /* Fallback for browsers do NOT support vh unit */
     min-height: 100vh;
-    /* These two lines are counted as one :-)       */
     display: flex;
     align-items: center;
+    background-color: transparent;
 }
-
-/* .inner {
-    position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-} */
 
 .intro {
     margin: 0;
@@ -99,7 +90,6 @@ h4 {
 .h2-title {
     font-family: 'Dancing Script', cursive;
     margin-bottom: 0rem;
-    /* font-size: 67px; */
     color: #fff;
     text-align: left;
     margin-left: 60px;
@@ -107,13 +97,13 @@ h4 {
 
 @media (max-width: 500px) {
     .h2-title {
-        font-size: 48px;
+        font-size: 65px;
     }
 }
 
 @media (min-width: 501px) {
     .h2-title {
-        font-size: 67px;
+        font-size: 90px;
     }
 }
 
