--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,22 @@ h4 {
     border-radius: 50%;
 }
 
+#h1-introLg2 a:hover {
+    display: inline-block;
+    font-family: 'Permanent Marker', cursive;
+    font-size: 4vmax;
+    background-color: #00833E;
+    color: #fff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 40px;
+    padding-left: 40px;
+    border-radius: 50%;
+    transform: scale(1.3, 1.3);
+    -webkit-transform: scale(1.3, 1.3);
+    -moz-transform: scale(1.3, 1.3);
+}
+
 .h4-intro {
     font-family: 'Dancing Script', cursive;
     color: #fff;
@@ -213,7 +229,7 @@ h4 {
 }
 
 @media (min-width: 501px) {
-    .h2-title {
+    .featureTitleH1 {
         font-size: 75px;
     }
 }
@@ -228,7 +244,7 @@ h4 {
 
 .feature-box {
     border-radius: 50%;
-    padding-bottom: 7%;
+    padding-bottom: 60px;
 }
 
 .feature-pics {
