--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: #000000;
-    font-family: 'EB Garamond', serif;
+    font-family: 'Mate SC', serif;
     text-align: center;
     color: #fff;
 }
@@ -36,7 +36,8 @@ h4 {
     font-family: 'Dancing Script', cursive;
     margin-bottom: 0rem;
     font-size: 6vmax;
-    color: #fff;
+    /* color: #fff; */
+    color: #00833E;
 }
 
 .h1-intro {
@@ -46,7 +47,8 @@ h4 {
 #h1-introLg1 {
     font-family: 'Permanent Marker', cursive;
     font-size: 5vmax;
-    color: #00833E;
+    color: #FFD100;
+    
     opacity: 0;
 }
 
@@ -57,30 +59,45 @@ h4 {
 #h1-introLg2 a {
     display: inline-block;
     font-family: 'Permanent Marker', cursive;
-    font-size: 4vmax;
-    background-color: #00833E;
-    color: #fff;
+    font-size: 2vmax;
+    background-color: #fff;
+    color: #00833E;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-right: 40px;
     padding-left: 40px;
     border-radius: 50%;
+    position: relative;
+    border: none;
+    box-shadow: 0 0 0 0 rgba(0, 131, 62, 1);
+    background-repeat: no-repeat;
+    -webkit-animation: pulse 1.2s infinite cubic-bezier(.66, 0, 0, 1);
+    -moz-animation: pulse 1.2s infinite cubic-bezier(0.66, 0, 0, 1);
+    -ms-animation: pulse 1.2s infinite cubic-bezier(0.66, 0, 0, 1);
+    animation: pulse 1.2s infinite cubic-bezier(0.66, 0, 0, 1);
+}
+
+@-webkit-keyframes pulse {
+    to {
+        box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);
+    }
 }
 
 #h1-introLg2 a:hover {
     display: inline-block;
     font-family: 'Permanent Marker', cursive;
-    font-size: 4vmax;
-    background-color: #00833E;
-    color: #fff;
+    font-size: 3vmax;
+    background-color: #FFD100;
+    color: #00833E;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-right: 40px;
     padding-left: 40px;
     border-radius: 50%;
-    transform: scale(1.3, 1.3);
-    -webkit-transform: scale(1.3, 1.3);
-    -moz-transform: scale(1.3, 1.3);
+    -webkit-animation: none;
+    -moz-animation: none;
+    -ms-animation: none;
+    animation: none;
 }
 
 .h4-intro {
@@ -88,10 +105,16 @@ h4 {
     color: #fff;
 }
 
-.introImg {
+#introImg {
     text-align: center;
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 40%;
+    max-height: 40%;
+    @-webkit-keyframes myfirst
+    {
+    0%   {background-color: #fff;}
+    50%  {background: #ccc;}
+    100% {background: #fff;}
+    }
 }
 
 /*********************home.htlm******************/
@@ -123,11 +146,12 @@ h4 {
     }
 }
 
+
 /**************** Nav Section ******************/
 
 .navbar {
     font-size: 34px;
-    font-family: 'EB Garamond', serif;
+    font-family: 'Mate SC', serif;
     align-content: right;
     text-align: right;
 }
@@ -224,13 +248,13 @@ h4 {
 
 @media (max-width: 500px) {
     .featureTitleH1 {
-        font-size: 50px;
+        font-size: 45px;
     }
 }
 
 @media (min-width: 501px) {
     .featureTitleH1 {
-        font-size: 75px;
+        font-size: 51px;
     }
 }
 
@@ -341,3 +365,57 @@ h4 {
     border-color: blue;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
+
+.fade-in {
+    animation: fadeIn ease 15s;
+    -webkit-animation: fadeIn ease 15s;
+    -moz-animation: fadeIn ease 15s;
+    -o-animation: fadeIn ease 15s;
+    -ms-animation: fadeIn ease 15s;
+  }@keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
+  }
+  
+  @-moz-keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
+  }
+  
+  @-webkit-keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
+  }
+  
+  @-o-keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
+  }
+  
+  @-ms-keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+  }
+  
