--- a/styles.css
+++ b/styles.css
@@ -261,14 +261,14 @@ h4 {
 .featureH1 {
     color: #fff;
     font-family: 'Permanent Marker', cursive;
-    text-decoration-color: none;
+    text-decoration: underline;
     font-size: 2.1rem;
-    padding-bottom: 2%;
+    padding-bottom: 10%;
 }
 
 .feature-box {
     border-radius: 50%;
-    padding-bottom: 60px;
+    padding-bottom: 4%;
 }
 
 .feature-pics {
