--- a/styles.css
+++ b/styles.css
@@ -107,14 +107,12 @@ h4 {
 
 #introImg {
     text-align: center;
-    max-width: 40%;
-    max-height: 40%;
-    @-webkit-keyframes myfirst
-    {
-    0%   {background-color: #fff;}
-    50%  {background: #ccc;}
-    100% {background: #fff;}
-    }
+    /* max-width: 40%;
+    max-height: 40%; */
+}
+
+.jumbo{
+    background-color: black;
 }
 
 /*********************home.htlm******************/
@@ -418,4 +416,4 @@ h4 {
     100% {
       opacity:1;
   }
-  
+}
