--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ h4 {
     opacity: 0;
 }
 
+.pic-div{
+    
+}
+
 
 
 /*********************index.htlm******************/
@@ -428,6 +432,7 @@ h4 {
       opacity:1;
   }
 }
+
 
 
 
